app/assets/stylesheets/config/_bootstrap_variables.scss
// This is where you override default Bootstrap variables
// 1. Find all Bootstrap variables that you can override at the end of each component's documentation under the `Sass variables` anchor
// e.g. here are the ones you can override for the navbar https://getbootstrap.com/docs/5.2/components/navbar/#sass-variables
// 2. These variables are defined with default value (see https://robots.thoughtbot.com/sass-default)
// 3. You can override them below!

// General style
$font-family-sans-serif: $body-font;
$headings-font-family:   $headers-font;
$body-bg:                $primary;
$font-size-base:         1.6rem;

// Colors
$body-color: #474345;
$primary:    #FFFEFE;
$success:    $green;
$info:       #A40055;
$danger:     #A40055;
$warning:    #A40055;

// Buttons & inputs' radius
$border-radius:    2px;
$border-radius-lg: 2px;
$border-radius-sm: 2px;

// Override other variables below!
$input-border-radius: 20px;
$input-bg: $primary;
$component-active-bg: $accent;
$custom-checkbox-indicator-indeterminate-bg: $accent;

.background-secondary {
  background-color: $secondary;
}

// button overrides
.btn {
  font-size: 2rem;
  border-radius: 2.5rem;
  padding-left: 2rem;
  padding-right: 2rem;
}

.btn-outline-primary {
  background-color: $primary;
  border-color: $info;
  color: $secondary;
}

.btn-primary {
  background-color: $info;
  border-color: $info;
  color: $primary;

  a {
    color: $secondary;
  }
}

.btn:hover {
  background-color: inherit;
  color: inherit;
  border-color: inherit;
}

.btn-outline-primary:hover {
  background-color: $primary;
  border-color: $info;
  color: $body-color;
}

.btn-primary:hover {
  background-color: $info;
  border-color: $info;
  color: $primary;
}

.form-control, input {
  font-size: 2.0rem;
  border-radius: 50px;
  padding: 0.375rem 1.75rem;
}

